<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Microscope Image Processor</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">MICROSCOPIC IMAGE PROCESSOR</string>
    <string name="camera_button">Start camera</string>
    <string name="folder_button">Open image from gallery</string>
    <string name="help_button">Help</string>
    <string name="about_button">About</string>
    <string name="title_activity_about">About</string>
    <string name="about_description">A Microscopic Image Processing App to process and
                  analyse appropriate images. Development based on Image J at Swansea 
                  University College of Electrical and Electronics Engineering (SPEC) 
                  under the tutelage of Dr Karin Ennser.    </string>
    <string name="title_activity_incorporate_camera">Incorporate Camera</string>
    <string name="title_activity_open_gallery">Select Options From Menu Below</string>
    <string name="title_activity_grayscale">Converted to GrayScale Image</string>
    <string name="title_activity_smooth">Smoothed Image</string>
    <string name="title_activity_sharpen">Sharpened Image</string>
    <string name="title_activity_emboss">Embossed Image</string>
    <string name="title_activity_binary">Binary Image</string>
    <string name="title_activity_edges">Edges Detected</string>
    <string name="title_activity_contrast">Contrast Enhanced</string>
    <string name="title_activity_histogram">Image Histogram</string>
    <string name="title_activity_equalize">Histogram Equalized Image</string>
    <string name="process">Process</string>
    <string name="grayscale">GrayScale</string>
    <string name="binary">Binary</string>
    <string name="smooth">Smooth</string>
    <string name="sharpen">Sharpen</string>
    <string name="contrast">Enhance Contrast</string>
    <string name="emboss">Emboss</string>
    <string name="analyse">Analyse</string>
    <string name="edge_detect">Detect Edges</string>
    <string name="color_histogram">RGB Histogram</string>
    <string name="histogram">Histogram</string>
    <string name="equalize">Equalize Histogram</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
  
</resources>
