<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" 
    >
    
    <LinearLayout 
        android:id="@+id/mainsub_layout"
        android:orientation="vertical"
        android:layout_width="match_parent" 
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" 
        android:background="@drawable/ic_launcher" >
    
        <TextView
            android:id="@+id/main_title"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/main_title" />
        
        <RelativeLayout
            android:id="@+id/button_layout"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" >
            
            <Button 
                android:id="@+id/camera_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_button" />
            
            <Button 
                android:id="@+id/gallery_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/camera_button"
                android:layout_alignLeft="@+id/camera_button"
                android:text="@string/folder_button" />

            <Button 
                android:id="@+id/help_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gallery_button"
                android:layout_alignLeft="@+id/gallery_button"
                android:text="@string/help_button" />

            <Button 
                android:id="@+id/about_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/help_button"
                android:layout_alignLeft="@+id/help_button"
                android:text="@string/about_button" />
            
        </RelativeLayout>    
    </LinearLayout>
</LinearLayout>
